examples/bad/06-04-invalid-type-of-argument.lagger
int f(boolean t){
    println(t);
    return 0;
}

int main(){
    f("true");
    return 0;
}